=== MetricFu 2.0.2 / ???

* Flog gemspec version was >= 2.2.0, which was too early and didn't work. Changed to >= 2.3.0 -  Chris Griego
* RCov generator now uses a regex with begin and end line anchor to avoid splitting on comments with equal signs in source files - Andrew Selder
* RCov generator now always strips the 3 leading characters from the lines when reconstruction source files so that heredocs and block comments parse successfully - Andrew Selder
* Dan Mayer ported some specs for the Hotspots code into MetricFu from Caliper's code.
* Stefan Huber fixed some problems with churn pretending not to support Svn.
* Kakutani Shintaro added the ability to opt out of opening files with TextMate.
* Joel Nimety and Andrew Selder fixed a problem where Saikuro was parsing a dir twice.
* Dan Sinclair added some awesome 'annotate' functionality to the Hotspots page. Click on it so see the file with problems in-line. 

=== MetricFu 2.0.1 / 2010-11-13

* Delete trailing whitespaces - Delwyn de Villiers
* Stop Ubuntu choking on invalid multibyte char (US-ASCII) - Delwyn de Villiers
* Fix invalid next in lib/base/metric_analyzer.rb - Delwyn de Villiers
* Don't load Saikuro for Ruby 1.9.2 - Delwyn de Villiers
* Fixed a bug reported by Andrew Davis on the mailing list where configuring the data directory causes dates to be 0/0 - Joshua Cronemeyer

=== MetricFu 2.0.0 / 2010-11-10

* Hotspots - Dan Mayer, Ben Brinckerhoff, Jake Scruggs
* Rcov integration with Hotspots - Jake Scruggs, Tony Castiglione, Rob Meyer

=== MetricFu 1.5.1 / 2010-7-28

* Patch that allows graphers to skip dates that didn't generate metrics for that graph (GitHub Issue #20). - Chris Griego
* Fixed bug where if you try and use the gchart grapher with the rails_best_practices metric, it blows up (GitHub Issue #23). - Chris Griego
* Fixed 'If coverage is 0% metric_fu will explode' bug (GitHub Issue #6). - Stew Welbourne

=== MetricFu 1.5.0 / 2010-7-27
