@@ -1,4 +1,4 @@
-Copyright (c) 2008,2009,2010 Jake Scruggs
+Copyright (c) 2008,2009,2010,2011 Jake Scruggs
 
 Permission is hereby granted, free of charge, to any person
 obtaining a copy of this software and associated documentation
